crates/biome_cli/tests/snapshots/main_commands_migrate/migrate_config_up_to_date.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate
```

## `biome.json`

```json
{ "linter": { "enabled": true } }
```

# Emitted Messages

```block
biome.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1 │ {·"root":·false,"linter":·{·"enabled":·true·}·}
      │    ++++++++++++++                              

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ biome migrate --write
  

```
