crates/biome_cli/tests/snapshots/main_commands_migrate/migrate_help.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
# Emitted Messages

```block
Updates the configuration when there are breaking changes.

Usage: migrate [--write] [COMMAND ...]

Global options applied to all commands
        --colors=<off|force>  Set the formatting mode for markup: "off" prints everything as plain
                              text, "force" forces the formatting of markup using ANSI even if the
                              console output is determined to be incompatible
        --use-server          Connect to a running instance of the Biome daemon server.
        --verbose             Print additional diagnostics, and some diagnostics show more
                              information. Also, print out what files were processed and which ones
                              were modified.
        --profile             Enable rule profiling output.
        --config-path=PATH    Set the file path to the configuration file, or the directory path to
                              find `biome.json` or `biome.jsonc`. If used, it disables the default
                              configuration file resolution.
                              [env:BIOME_CONFIG_PATH: N/A]
        --max-diagnostics=<none|<NUMBER>>  Cap the amount of diagnostics displayed. When `none` is
                              provided, the limit is lifted.
                              [default: 20]
        --skip-parse-errors   Skip over files containing syntax errors instead of emitting an error
                              diagnostic.
        --no-errors-on-unmatched  Silence errors that would be emitted in case no files were
                              processed during the execution of the command.
        --error-on-warnings   Tell Biome to exit with an error code if some diagnostics emit
                              warnings.
        --reporter=<json|json-pretty|github|junit|summary|gitlab|checkstyle|rdjson>  Allows to
                              change how diagnostics and summary are reported.
        --log-file=ARG        Optional path to redirect log messages to.
                              If omitted, logs are printed to stdout.
        --log-level=<none|debug|info|warn|error>  The level of logging. In order, from the most
                              verbose to the least verbose: debug, info, warn, error.
                              The value `none` won't show any logging.
                              [default: none]
        --log-kind=<pretty|compact|json>  How the log should look like.
                              [default: pretty]
        --diagnostic-level=<info|warn|error>  The level of diagnostics to show. In order, from the
                              lowest to the most important: info, warn, error. Passing
                              `--diagnostic-level=error` will cause Biome to print only diagnostics
                              that contain only errors.
                              [default: info]

Available options:
        --write               Writes the new configuration file to disk
        --fix                 Alias of `--write`, writes the new configuration file to disk
    -h, --help                Prints help information

Available commands:
    prettier                  It attempts to find the files `.prettierrc`/`prettier.json` and
                              `.prettierignore`, and map the Prettier's configuration into Biome's
                              configuration file.
    eslint                    It attempts to find the ESLint configuration file in the working
                              directory, and update the Biome's configuration file as a result.

```
