crates/biome_cli/tests/snapshots/main_commands_migrate/missing_configuration_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate
```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: Biome couldn't find the Biome configuration file.
  


```

# Emitted Messages

```block
If this project has not yet been set up with Biome yet, please follow the Getting Started guide first.
```
