crates/biome_cli/tests/snapshots/main_commands_migrate/should_migrate_jsonc_with_config_path.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate --config-path '<TEMP_DIR>/should_migrate_jsonc_with_config_path/base.biome.jsonc' --write
```

## `base.biome.jsonc`

```jsonc
// this is another comment
{
	// this is a comment
	"root": false,
	// this is a comment
	"assist": { "actions": { "source": { "organizeImports": "on" } } }
}

```

# Emitted Messages

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - <TEMP_DIR>/should_migrate_jsonc_with_config_path/base.biome.jsonc: configuration successfully migrated.
  

```
